# demo-model-viewer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/models/derringer22/: derringer.fbx
assets/models/katana/: Katana_V5.fbx
assets/models/men/: men.fbx
assets/shaders/: basic_fragment.frag  basic_vertex.vert  skybox.frag
cmake/: FindAssimp.cmake  FindGLFW.cmake  FindGLM.cmake
src/: Application.cpp  Application.h  AssetsManager.cpp  AssetsManager.h  AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt  Camera.cpp  Camera.h  Config.cpp  Config.h  Cubemap.cpp  Cubemap.h  DirLight.cpp  DirLight.h  Exceptions.h  InputParams.cpp  InputParams.h  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Settings.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
